# autograder

./: .envrc  .gitignore  pyproject.toml
autograde-rs/: Cargo.toml  TODO  flake.nix
autograde-rs/src/: build.rs  cli.rs  config.rs  lib.rs  main.rs  test.rs  unit.rs
